# ssh-python

./: .gitignore  1.py  1.txt  README.md  build.sh  pyproject.toml
ssh_python/: .py  README.md  __main__.py  shell.py  ssh_methods.py  tk.py
